<resources>
    <string name="app_name">Toilet Data</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log in </string>
    <string name="action_register">Create Account</string>
    <string name="createNewAccount">Create a New Account</string>
    <string name="forgetPassword">Did you forget your password?</string>
    <string name="serviceRule">ToiletData Service Policy</string>
    <string name="personalInfo">Privacy Policy</string>
    <string name="readDocument">By signing up you are agreeing to Toilet Data Service Policy and Privacy Policy</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_exists">This user already exists</string>
    <string name="error_weak_password">The password is too short</string>
    <string name="changeUserName">Change User Name</string>
    <string name="changeUserPhoto">Change User Photo</string>
    <string name="aboutThisApp">About Toilet Data</string>
    <string name="privacyInfo">Privacy</string>
    <string name="showHelp">Help</string>
    <string name="logout">Log Out</string>
    <string name="settingsButton">Settings</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="backToOriginalPlace">Search Near Me</string>
    <string name="searchLocationAppBarTitle">Search Destination</string>
    <string name="enterPlaceHere">Enter your destination</string>
    <string name="searchStart">Search</string>
    <string name="choosePhoto">Choose Photo</string>
    <string name="savePhoto">Save Photo</string>
    <string name="changePhoto">Change Photo</string>
    <string name="saveString">Save</string>
    <string name="changeUserNameTitleBar">Name</string>
    <string name="moreInfo">More Details</string>
    <string name="userName">user name</string>
    <string name="reviewLikeCount">like 3</string>
    <string name="waitingTime">waiting time</string>
    <string name="one">1</string>
    <string name="dateString">2017/4/21</string>
    <string name="reviewListTitle">More Reviews</string>
    <string name="favListTitle">Favorite List</string>
    <string name="userWentTitle">Visited List</string>
    <string name="commentTime">4/3/2017</string>
    <string name="thankYouComment">It was one of the best toilets I had ever seen in my life. It was awesome!!</string>
    <string name="commentWaitingTime">3 minutes waited</string>
    <string name="distanceString">500m</string>
    <string name="nameString">Name</string>
    <string name="avereageWait">Ave Wait　３m</string>
    <string name="ratingValue">3.0</string>
    <string name="addPlaceHere">Add Place</string>
    <string name="addPinHere">Set a Pin with a touch on the Map</string>
    <string name="mainDetailImage">Main Image</string>
    <string name="detailName">Name</string>
    <string name="detailDistance">Convenience Store/ 500m</string>
    <string name="detailAvailableTimes">12:00 〜 18:00/ Ave Wait 2m</string>
    <string name="detailStarStrings">3.0</string>
    <string name="detailRatingStrings">(45)</string>
    <string name="detailAdreess">Address</string>
    <string name="detailHowToAccess">How to Access</string>
    <string name="goToThisPlace">Go to this Place</string>
    <string name="firstPosterPlace">First Poster</string>
    <string name="lastEditerPlace">Last Editer</string>
    <string name="sendTroubles">Report</string>
    <string name="userKansou">Reviews</string>
    <string name="defaultCount">1</string>
    <string name="superCount">100000</string>
    <string name="postKansouButton">Review</string>
    <string name="startEditButton">Edit</string>
    <string name="showAllReviewsButton">More Reviews</string>
    <string name="image">Image</string>
    <string name="text_distance">Distance</string>
    <string name="select_distance">Choose Distance</string>
    <string name="orderToilet">Order by</string>
    <string name="category">Category</string>
    <string name="searchWithFilter">Filter Search</string>
    <string name="detailToilet">Detail Info</string>
    <string name="name_booleanValues">Switch</string>
    <string name="typeDefalutZero">All Places</string>
    <string name="typeDefalutOne">Public Restroom</string>
    <string name="typeDefalutTwo">Convenience Store</string>
    <string name="typeDefalutThree">Caffe</string>
    <string name="typeDefalutFour">Restaurant</string>
    <string name="typeDefalutFive">Shopping Mall</string>
    <string name="typeDefalutSix">Tourist Place</string>
    <string name="typeDefalutSeven">Stadium</string>
    <string name="typeDefalutEight">Portable Toilet</string>
    <string name="typeDefalutNine">Home Toilet (During Power Outage)</string>
    <string name="typeDefalutZeroEdit">Select a category</string>
    <string name="name_available">Available</string>
    <string name="name_japaneseToilet">Squat Toilet</string>
    <string name="name_westernToilet">Sitting Toilet</string>
    <string name="name_onlyFemale">Female Toilet</string>
    <string name="name_unisex">Unisex Toilet</string>
    <string name="name_washlet">Washlet</string>
    <string name="name_warmSeat">Warm Toilet Seat</string>
    <string name="name_autoOpen">Automatic Lid</string>
    <string name="name_noVirusBenki">Antibacterial Toilet Seat</string>
    <string name="name_paperForBenki">Toilet Seat Paper</string>
    <string name="name_cleanerForBenki">Toilet Seat Cleaner</string>
    <string name="name_nonTouchWash">Auto Toilet Flusher</string>
    <string name="name_senser">Sensor Hand Wash</string>
    <string name="name_sensorHandWash">Sensor Hand Wash</string>
    <string name="name_soap">Hand Soap</string>
    <string name="name_nonTouchSoap">Sensor Hand Soap</string>
    <string name="name_paperTowel">Paper Towel</string>
    <string name="name_handDrier">Hand Drier</string>
    <string name="name_clothes">Coat Hooks</string>
    <string name="name_baggageSpace">Luggage Rack</string>
    <string name="name_englishWritten">Signs Written in English</string>
    <string name="name_noNeedAsk">No Need to Ask</string>
    <string name="name_parking">Parking</string>
    <string name="name_airCondition">Air Conditioner</string>
    <string name="name_wifi">Free Wi-Fi</string>
    <string name="name_otohime">Toilet Flushing Sound Simulator</string>
    <string name="name_napkinSelling">Sanitary Napkin Vending Machine</string>
    <string name="name_makeroom">Powder Room</string>
    <string name="omutu">Diaper Changing Table</string>
    <string name="babyChairGoodPlace">Safe Baby Chair</string>
    <string name="name_wheelChair">Handicapped Toilet</string>
    <string name="name_wheelChairAccess">Wheelchair Accessible</string>
    <string name="name_handrail">Handrail</string>
    <string name="name_callHelp">Emergency Button</string>
    <string name="name_ostomate">Stoma Toilet</string>
    <string name="braille">Braille Signs</string>
    <string name="name_voiceGuide">Voice Guide</string>
    <string name="name_fancy">Stylish Room</string>
    <string name="name_smell">Smells Good</string>
    <string name="name_confortableWide">Large Room</string>
    <string name="name_milk">Breastfeeding Room</string>
    <string name="name_milkOnlyFemale">Female Exclusive</string>
    <string name="name_milkMaleOkay">Male Accessible</string>
    <string name="name_personalSpace">Personal Room</string>
    <string name="name_personalSpaceWithLock">Personal Room with Lock</string>
    <string name="name_wideBabySpace">Large Room</string>
    <string name="name_rentalBabyCar">Rental Baby Stroller</string>
    <string name="name_babyCarAccess">Baby Stroller Accessible</string>
    <string name="name_omutu">Diaper Changing Table</string>
    <string name="name_hipCleanStuff">Baby Wipes</string>
    <string name="name_omutuTrashCan">Trash Can for Diapers</string>
    <string name="name_omutuSelling">Diaper Vending Machine</string>
    <string name="name_babyFood">Sells Baby Food</string>
    <string name="name_babysink">Sink</string>
    <string name="name_babyWashstand">Washstand</string>
    <string name="name_babyHotWater">Hot Water Supply</string>
    <string name="name_babyMicroWave">Microwave</string>
    <string name="name_babySellingWater">Vending Machine</string>
    <string name="name_foodForBabySelling">Sells Baby Food</string>
    <string name="name_spaceForEatingWithBaby">Dining Space</string>
    <string name="name_babyChair">Baby Chair</string>
    <string name="name_babySoffa">Soffa</string>
    <string name="name_babyKidsToilet">Kids Toilet</string>
    <string name="name_babyKidsSpace">Play Space</string>
    <string name="name_heightMeasure">Height Measurer</string>
    <string name="name_weightMeasure">Weight Measurer</string>
    <string name="name_babyPlayingToy">Toys</string>
    <string name="name_babyFancy">Stylish Room</string>
    <string name="name_babySmellGood">Smells Good</string>
    <string name="benkiWestern">Sitting Toilet</string>
    <string name="benkiJapanese">Squat Toilet</string>
    <string name="benkiPee">小便器</string>
    <string name="menToilet">Male Toilet</string>
    <string name="womenToilet">Female Toilet</string>
    <string name="setubi">General Features</string>
    <string name="basicInfo">Basic Info</string>
    <string name="howToAccess">How to Access</string>
    <string name="writeFloor">Floor</string>
    <string name="evaluation">Evaluation</string>
    <string name="kansou">Review</string>
    <string name="changePin">Change Pin</string>
    <string name="layoutMap">Map</string>
    <string name="picture">Picture</string>
    <string name="addPicture">Add Picture</string>
    <string name="feedback">Post</string>
    <string name="sendFeedback">Post</string>
    <string name="writeToiletName">Name of the Place</string>
    <string name="pick_time">Available Time</string>
    <string name="default_time">0 : 00</string>
    <string name="timeDot"> : </string>
    <string name="search"> Search </string>
    <string name="access">How to Accuss</string>
    <string name="accessGo">How to Access</string>
    <string name="writeKansou">Please write your feedback</string>
    <string name="look_detail">More Detail</string>
    <string name="edit_detail">Edit</string>
    <string name="availableSwitch">Available</string>
    <string name="between">〜</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="post_kansou">Post Reviews</string>
    <string name="name_deleteFilters">Remove Filters</string>
    <string name="deletingFilters">Remove Filters</string>
    <string name="openAllDay">If it opens All Day, then write 0:00 〜 24:00</string>
    <string name="basicFucation">General Features</string>
    <string name="searchBenkiFucation">Toilet Seat Function</string>
    <string name="searchSettings">Washstand</string>
    <string name="searchForLadys">Female Toilet</string>
    <string name="searchBarrierFree">Barrier Free</string>
    <string name="searchOthers">Miscellaneous</string>
    <string name="papaMamaFriendly">For Parents</string>
    <string name="appDescription">Welcome to Toilet Data</string>
    <string name="appDescription2">Find the best toilets near you</string>
    <string name="appDescription3"></string>
    <string name="skipLogin">Skip</string>
    <string name="startLogin">Login</string>
    <string name="startSignUp">Sign Up</string>
    <string name="appLogoImage">Logo</string>
</resources>