<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.kazuhiroshigenobu.googlemaptraining.FirstTimeActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/skipLogin"
        android:textColor="@color/colorSubText"
        android:layout_gravity="end"
        android:background="@color/colorPrimary"
        android:id="@+id/buttonForSkip"


        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:srcCompat = "@drawable/app_logo"
        android:contentDescription="@string/appLogoImage"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appDescription"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/colorLabel"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appDescription2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/colorLabel"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appDescription3"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/colorLabel"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape"
        android:text="@string/startLogin"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:id="@+id/buttonForLogin"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/startSignUp"
        android:textSize="20sp"
        android:background="@drawable/shape"
        android:textColor="@color/colorPrimary"
        android:id="@+id/buttonForSingUp"
        />




    
    
</LinearLayout>
