<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorForBackground"
    tools:context="com.example.kazuhiroshigenobu.googlemaptraining.ChangeUserPhotoActivity">



    <include
        android:id="@+id/app_bar_change_user_image"
        layout="@layout/app_bar_change_user_image"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>



   <ImageView
       android:layout_width="200dp"
       android:layout_height="200dp"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="100dp"
       android:id="@+id/userChangeImageView"
       android:contentDescription="@string/image"
       android:background="@color/colorLabel"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/buttonChangeChoosePhoto"
        android:text="@string/choosePhoto"
        android:layout_below="@+id/userChangeImageView"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_button"
        android:textSize="20sp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/savePhoto"
        android:id="@+id/buttonChangeSavePhoto"
        android:layout_below="@+id/buttonChangeChoosePhoto"
        android:layout_margin="30dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhiteText"
        android:textSize="20sp"


        />

</RelativeLayout>
